--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
 
                 <div class="imgae_section">
-                    <img src="images/herb.png" alt="" style="height: 400px; width: 700px; border-radius: 30px; box-shadow: 4px 4px 20px;">
+                    <img src="images/herb.png" alt="" >
                 </div>
             </div>
         </div>
