--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#service">Services</a></li>
-                <li><a href="#why">Why Me</a></li>
+                <li><a href="#why">Why us</a></li>
                 <li><a href="#gallery">Projects</a></li>
                 <li style="border: 2px solid whitesmoke;" ><a href="#contact">Contact</a></li>
             </ul>
